--- a/index.html
+++ b/index.html
@@ -1,16 +1,348 @@
 <!DOCTYPE html>
-<html>
-<head>
+<html lang="en">
 
-<!-- meta tags, links to css, etc. -->
-<title>DIG 245 CSS Self-Portrait</title>
+<head>
+  <style>
+    body {
+      background-image: linear-gradient(270deg, green, orange);
+    }
+
+    #info {
+      position: fixed;
+      margin-top: 600px;
+    }
+
+    .face {
+      position: fixed;
+      margin-top: 150px;
+      margin-left: 200px;
+      width: 300px;
+      height: 400px;
+      background: #cb8666;
+      border-radius: 70px 70px 200px 200px;
+    }
+
+    .right-ear {
+      position: fixed;
+      margin-left: 300px;
+      top: 270px;
+      background: #cb8666;
+      width: 30px;
+      height: 100px;
+      border-radius: 60px 60px 120px 30px;
+    }
+
+    .left-ear {
+      position: fixed;
+      margin-left: -30px;
+      top: 270px;
+      background: #cb8666;
+      width: 30px;
+      height: 100px;
+      border-radius: 60px 60px 30px 120px;
+    }
+
+    .left-eye {
+      position: fixed;
+      margin-left: 50px;
+      top: 260px;
+      background: white;
+      width: 70px;
+      height: 30px;
+      border-radius: 60px 60px 60px 60px;
+      z-index: 1;
+    }
+
+    .right-eye {
+      position: fixed;
+      margin-left: 180px;
+      top: 260px;
+      background: white;
+      width: 70px;
+      height: 30px;
+      border-radius: 60px 60px 60px 60px;
+      z-index: 1;
+    }
+
+    .right-eyeball {
+      position: fixed;
+      margin-left: 200px;
+      top: 265px;
+      background: blue;
+      width: 20px;
+      height: 20px;
+      border-radius: 90px 90px 90px 90px;
+      z-index: 2;
+    }
+
+    .left-eyeball {
+      position: fixed;
+      margin-left: 80px;
+      top: 265px;
+      background: blue;
+      width: 20px;
+      height: 20px;
+      border-radius: 90px 90px 90px 90px;
+      z-index: 2;
+    }
+
+    .right-eyebrow1 {
+      position: fixed;
+      margin-left: 180px;
+      top: 220px;
+      background: #6b5b4c;
+      width: 70px;
+      height: 20px;
+      border-radius: 60px 60px 60px 60px;
+      z-index: 2;
+    }
+
+    .right-eyebrow2 {
+      position: fixed;
+      margin-left: 230px;
+      top: 230px;
+      background: #6b5b4c;
+      width: 40px;
+      height: 20px;
+      border-radius: 60px 60px 60px 60px;
+      z-index: 2;
+    }
+
+    .left-eyebrow1 {
+      position: fixed;
+      margin-left: 50px;
+      top: 220px;
+      background: #6b5b4c;
+      width: 70px;
+      height: 20px;
+      border-radius: 60px 60px 60px 60px;
+      z-index: 1;
+    }
+
+    .left-eyebrow2 {
+      position: fixed;
+      margin-left: 30px;
+      top: 230px;
+      background: #6b5b4c;
+      width: 40px;
+      height: 20px;
+      border-radius: 60px 60px 60px 60px;
+      z-index: 1;
+    }
+
+    .nose1 {
+      position: fixed;
+      margin-left: 127.5px;
+      top: 270px;
+      background: #b47050;
+      width: 45px;
+      height: 100px;
+      border-radius: 60px 60px 60px 60px;
+      z-index: 1;
+    }
+
+    .nose2 {
+      position: fixed;
+      margin-left: 105px;
+      top: 320px;
+      background: #b47050;
+      width: 90px;
+      height: 40px;
+      border-radius: 60px 60px 60px 60px;
+      z-index: 1;
+    }
+
+    .upper-lip {
+      position: fixed;
+      margin-left: 80px;
+      top: 410px;
+      background: #bb7865;
+      width: 140px;
+      height: 20px;
+      border-radius: 60px 60px 60px 60px;
+      z-index: 1;
+    }
+
+    .lower-lip {
+      position: fixed;
+      margin-left: 115px;
+      top: 440px;
+      background: #bb7865;
+      width: 70px;
+      height: 25px;
+      border-radius: 60px 60px 60px 60px;
+      z-index: 1;
+    }
+
+    .lower-lip-l {
+      position: fixed;
+      margin-left: 85px;
+      top: 430px;
+      background: #bb7865;
+      width: 40px;
+      height: 25px;
+      border-radius: 60px 60px 60px 60px;
+      z-index: 1;
+    }
+
+    .lower-lip-r {
+      position: fixed;
+      margin-left: 175px;
+      top: 430px;
+      background: #bb7865;
+      width: 40px;
+      height: 25px;
+      border-radius: 60px 60px 60px 60px;
+      z-index: 1;
+    }
+
+    .teeth {
+      position: fixed;
+      margin-left: 105px;
+      top: 420px;
+      background: white;
+      width: 90px;
+      height: 25px;
+      z-index: 0;
+    }
+
+    .hair1 {
+      position: fixed;
+      margin-left: 185px;
+      top: 85px;
+      background: #463628;
+      width: 250px;
+      height: 110px;
+      border-radius: 20px 20px 20px 20px;
+      z-index: 1;
+    }
+
+    .hair2 {
+      position: fixed;
+      margin-left: 480px;
+      top: 150px;
+      background: #463628;
+      width: 50px;
+      height: 100px;
+      border-radius: 20px 20px 60px 60px;
+      z-index: 1;
+    }
+
+    .hair3 {
+      position: fixed;
+      margin-left: 170px;
+      top: 150px;
+      background: #463628;
+      width: 50px;
+      height: 100px;
+      border-radius: 20px 20px 60px 60px;
+      z-index: 1;
+    }
+
+    .hair4 {
+      position: fixed;
+      margin-left: 200px;
+      top: 160px;
+      background: #463628;
+      width: 100px;
+      height: 50px;
+      border-radius: 30px 30px 30px 30px;
+      z-index: 1;
+    }
+
+    .hair5 {
+      position: fixed;
+      margin-left: 370px;
+      top: 95px;
+      background: #463628;
+      width: 150px;
+      height: 100px;
+      border-radius: 20px 20px 20px 20px;
+      z-index: 1;
+    }
+
+    .hair6 {
+      position: fixed;
+      margin-left: 400px;
+      top: 160px;
+      background: #463628;
+      width: 100px;
+      height: 50px;
+      border-radius: 30px 30px 30px 30px;
+      z-index: 1;
+    }
+  </style>
+  <!-- meta tags, links to css, etc. -->
+  <title>DIG 245 CSS Self-Portrait</title>
 
 </head>
+
 <body>
 
-<!-- visible content goes here -->
-<h1>DIG 245 CSS Self-Portrait</h1>
+  <!-- visible content goes here -->
 
-<script src="assets/js/main.js"></script>
+
+    <a href="https://www.figma.com/file/EO1EdVWxGIFVAMlMvaMPQi/Untitled?node-id=0%3A1">
+      <div class="hair">
+        <div class="hair1">
+        </div>
+        <div class="hair2">
+        </div>
+        <div class="hair3">
+        </div>
+        <div class="hair4">
+        </div>
+        <div class="hair5">
+        </div>
+        <div class="hair6">
+        </div>
+      </div>
+      <div class="face">
+        <div class="left-ear">
+        </div>
+        <div class="left-eye">
+        </div>
+        <div class="left-eyeball">
+        </div>
+        <div class="left-eyebrow1">
+        </div>
+        <div class="left-eyebrow2">
+        </div>
+        <div class="right-eyeball">
+        </div>
+        <div class="right-eye">
+        </div>
+        <div class="right-eyebrow1">
+        </div>
+        <div class="right-eyebrow2">
+        </div>
+        <div class=" right-ear">
+        </div>
+        <div class="nose1">
+        </div>
+        <div class="nose2">
+        </div>
+        <div class="upper-lip">
+        </div>
+        <div class="lower-lip">
+        </div>
+        <div class="lower-lip-l">
+        </div>
+        <div class="lower-lip-r">
+        </div>
+        <div class="teeth">
+        </div>
+      </div>
+    </a>
+
+    <div id="info">
+      <hr>
+      <h1>DIG 245 CSS Self-Portrait</h1>
+      <h4>Current Mouse Position.</h4>
+      <p id="screen-log"></p>
+      <hr>
+    </div>
+    <script src="assets/js/main.js"></script>
 </body>
+
 </html>
